--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 <footer class="page-footer font-small blue">
 
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        <!-- <div class="footer-copyright text-center py-3">© 2018 Copyright:
           <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-        </div>
+        </div> -->
         <!-- Copyright -->
       
       </footer>
