--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
       data-interval="false"
     >
       <!-- Indicators -->
+      <div>
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active bb"></li>
         <li data-target="#myCarousel" data-slide-to="1" class="bb"></li>
         <li data-target="#myCarousel" data-slide-to="2" class="bb"></li>
         <li data-target="#myCarousel" data-slide-to="3" class="bb"></li>
       </ol>
-
+    </div>
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
